	PR c++/27801 	* call.c (perform_implicit_conversion): Do not actually perform 	conversions in templates. 	PR c++/26496 	* call.c (resolve_args): Check for invalid uses of bound 	non-static member functions. 	* init.c (build_offset_ref): Return error_mark_node for errors. 	PR c++/27385 	* decl.c (reshape_init): Robustify. 	(reshape_init_array_1): Likewise. 	PR c++/27801 	* g++.dg/template/cond6.C: New test. 	PR c++/26496 	* g++.dg/template/crash51.C: New test. 	* g++.old-deja/g++.mike/net36.C: Tweak error markers. 	PR c++/27385 	* g++.dg/init/array20.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@114278 138bc75d-0d04-0410-961f-82ee72b054a4