gcc/testsuite/g++.dg/template/cond6.C
@@ -1,0 +1,6 @@
+// PR c++/27801
+
+template<int> int foo(int i)
+{
+  return !( (1 && i) ? 0 : 1 );
+}
